added active Elan scenarios to irix-fieldset

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1042,6 +1042,7 @@
                 "DokpoolBehaviour_label": "Dokpool Verhalten",
                 "DokpoolMeta_label": "Dokpool Metadaten",
                 "Identification_label": "allg. Informationen",
+                "ElanScenarios_label": "Elan Ereignisse",
                 "DokpoolBehaviour_Elan_label": "Elan",
                 "DokpoolBehaviour_Doksys_label": "Doksys",
                 "DokpoolBehaviour_Rodos_label": "Rodos",
