--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1026,6 +1026,7 @@
                 "DokpoolBehaviour_label": "en:Dokpool Verhalten",
                 "DokpoolMeta_label": "en:Dokpool Metadaten",
                 "Identification_label": "en:allg. Informationen",
+                "ElanScenarios_label": "Elan Incidences",
                 "DokpoolBehaviour_Elan_label": "Elan",
                 "DokpoolBehaviour_Doksys_label": "Doksys",
                 "DokpoolBehaviour_Rodos_label": "Rodos",
