added identification threshold button

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -494,6 +494,7 @@
                 "removeSeriesQuestionTitle": "Request",
                 "removeSeriesQuestionTpl": "Remove series '{0}'?",
                 "startLabel": "Start",
+                "toggleDataBelowIdentificationThreshold": "Show data below < Id. Thresh.",
                 "endLabel": "End"
             }
         }
