--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -495,6 +495,7 @@
                 "removeSeriesQuestionTitle": "Rückfrage",
                 "removeSeriesQuestionTpl": "Serie '{0}' entfernen?",
                 "startLabel": "Start",
+                "toggleDataBelowIdentificationThreshold": "Daten < NWG anzeigen",
                 "endLabel": "Ende"
             }
         }
