added textfield to irixfieldset for free text and permalink addition

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1046,7 +1046,8 @@
                 "DokpoolBehaviour_Elan_label": "Elan",
                 "DokpoolBehaviour_Doksys_label": "Doksys",
                 "DokpoolBehaviour_Rodos_label": "Rodos",
-                "DokpoolBehaviour_Rei_label": "Rei"
+                "DokpoolBehaviour_Rei_label": "Rei",
+                "Permalink_text": "Darstellung im GIS anzeigen"
             }
         }
     },
