--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1030,7 +1030,8 @@
                 "DokpoolBehaviour_Elan_label": "Elan",
                 "DokpoolBehaviour_Doksys_label": "Doksys",
                 "DokpoolBehaviour_Rodos_label": "Rodos",
-                "DokpoolBehaviour_Rei_label": "Rei"
+                "DokpoolBehaviour_Rei_label": "Rei",
+                "Permalink_text": "en:Darstellung im GIS anzeigen"
             }
         }
     },
