added initial layer merging

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -990,11 +990,27 @@
             }
         }
     },
+    "BasiGX.util.Merge": {
+        "statics": {
+            "adoptAttributes": "Attribute übernehmen",
+            "applyText": "Übernehmen",
+            "cancelText": "Abbrechen",
+            "windowTitle": "Features übernehmen"
+        }
+    },
     "BasiGX.view.button.AddWms": {
         "config": {
             "data": {
                 "tooltip": "WMS hinzufügen...",
                 "text": "WMS"
+            }
+        }
+    },
+    "BasiGX.view.button.MergeSelection": {
+        "config": {
+            "data": {
+                "tooltip": "Selektierte Features in diesen Layer übernehmen",
+                "text": "Features übernehmen"
             }
         }
     },
