--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -889,11 +889,27 @@
             }
         }
     },
+    "BasiGX.util.Merge": {
+        "statics": {
+            "adoptAttributes": "fr:Adopt attributes",
+            "applyText": "fr:Apply",
+            "cancelText": "fr:Cancel",
+            "windowTitle": "fr:Merge features"
+        }
+    },
     "BasiGX.view.button.AddWms": {
         "config": {
             "data": {
                 "tooltip": "fr:WMS hinzufügen...",
                 "text": "fr:WMS"
+            }
+        }
+    },
+    "BasiGX.view.button.MergeSelection": {
+        "config": {
+            "data": {
+                "tooltip": "fr:Merge selected features into this layer",
+                "text": "fr:Merge features"
             }
         }
     },
