added identification threshold button to carto window

--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -80,6 +80,7 @@
                 "expandToLeft": "fr:Show older data",
                 "expandToRight": "fr:Show newer data",
                 "toggleLegendVisibility": "fr:Toggle legend visibility",
+                "displayIdentificationThreshold": "fr:Display data < identification threshold",
                 "exportToPngText": "fr:Download Chart",
                 "toggleGrouping": "fr:Gruppierung tauschen",
                 "toggleUncertainty": "fr:Toggle uncertainty"
