--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -89,6 +89,7 @@
                 "exportToPngText": "Download Chart",
                 "toggleGrouping": "Gruppierung tauschen",
                 "toggleUncertainty": "Messungenauigkeit umschalten",
+                "displayIdentificationThreshold": "Daten < NWG anzeigen",
                 "irixPrintText": "DokPool",
                 "irixPrintTooltip": "exportieren des Charts nach DokPool"
             }
