--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -89,6 +89,7 @@
                 "exportToPngText": "Download Chart",
                 "toggleGrouping": "Toggle grouping",
                 "toggleUncertainty": "Toggle uncertainty",
+                "displayIdentificationThreshold": "Display data < identification threshold",
                 "irixPrintText": "DokPool",
                 "irixPrintTooltip": "export chart into DokPool"
             }
