better layout, added another label for clarity

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -992,10 +992,11 @@
     },
     "BasiGX.util.Merge": {
         "statics": {
-            "adoptAttributes": "Attribute übernehmen",
+            "adoptAttributes": "Attribute hinzufügen",
             "applyText": "Übernehmen",
             "cancelText": "Abbrechen",
-            "windowTitle": "Features übernehmen"
+            "windowTitle": "Features übernehmen",
+            "matchText": "Attribute zuordnen:"
         }
     },
     "BasiGX.view.button.AddWms": {
