--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -894,7 +894,8 @@
             "adoptAttributes": "fr:Adopt attributes",
             "applyText": "fr:Apply",
             "cancelText": "fr:Cancel",
-            "windowTitle": "fr:Merge features"
+            "windowTitle": "fr:Merge features",
+            "matchText": "fr:Please select attributes to be mapped:"
         }
     },
     "BasiGX.view.button.AddWms": {
