--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -990,13 +990,15 @@
             }
         }
     },
-    "BasiGX.util.Merge": {
-        "statics": {
-            "adoptAttributes": "Attribute hinzufügen",
-            "applyText": "Übernehmen",
-            "cancelText": "Abbrechen",
-            "windowTitle": "Features übernehmen",
-            "matchText": "Attribute zuordnen:"
+    "BasiGX.view.window.MergeWindow": {
+        "config": {
+            "data": {
+                "adoptAttributes": "Attribute hinzufügen",
+                "applyText": "Übernehmen",
+                "cancelText": "Abbrechen",
+                "windowTitle": "Features übernehmen",
+                "matchText": "Attribute zuordnen:"
+            }
         }
     },
     "BasiGX.view.button.AddWms": {
