added initial work on import

--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -379,7 +379,8 @@
                 "downloadMessage": "fr:Download Layerdaten?",
                 "downloadButtonYes": "Oui",
                 "downloadButtonNo": "Non",
-                "outputFormatText": "fr:Ausgabeformat"
+                "outputFormatText": "fr:Ausgabeformat",
+                "saveLayerText": "fr:Save layer"
             }
         }
     },
