--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -410,7 +410,8 @@
                 "downloadMessage": "Layerdaten herunterladen?",
                 "downloadButtonYes": "Ja",
                 "downloadButtonNo": "Nein",
-                "outputFormatText": "Ausgabeformat"
+                "outputFormatText": "Ausgabeformat",
+                "saveLayerText": "Layer speichern"
             }
         }
     },
