--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -409,7 +409,8 @@
                 "downloadMessage": "Download Layerdaten?",
                 "downloadButtonYes": "Yes",
                 "downloadButtonNo": "No",
-                "outputFormatText": "Output Format"
+                "outputFormatText": "Output Format",
+                "saveLayerText": "Save layer"
             }
         }
     },
@@ -1118,7 +1119,7 @@
                 "renameButton": "Rename",
                 "renameBox": "Please specify the new column name:",
                 "deleteTitle": "Delete",
-                "deleteQuestion": "Do you really want to delete the column?"
+                "deleteQuestion": "Do you really want to delete the column?",
             }
         }
     },
